--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
       var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
-        hm.src = "//hm.baidu.com/hm.js?1c24a71a37dd2395e5d7c9257ee3b0ea";
+        hm.src = "//hm.baidu.com/hm.js?{{site.baidu.id}}";
         var s = document.getElementsByTagName("script")[0]; 
         s.parentNode.insertBefore(hm, s);
       })();
