--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,8 +32,8 @@
   </script>  
 
   <!-- 百度统计 -->
-  {% site.baidu.id %}
-  <script>
+    {% if site.baidu.id %}
+    <script>
       var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
@@ -41,8 +41,8 @@
         var s = document.getElementsByTagName("script")[0]; 
         s.parentNode.insertBefore(hm, s);
       })();
-  </script>
-  #{% endif %}
+    </script>
+    {% endif %}
 
 <!-- google 统计 -->
   {% if site.ga.id %}
